# lgs_reel_server

./: .gitignore  CMakeLists.txt  DONTREADME.txt  README.md  log.txt  package.xml  pipecrawler_server.py  reel_server.py  reel_server_node.py  setup.py
action/: Crawlaction.action  Reelaction.action
install/: local_setup.sh  setup.sh
install/pipecrawler/share/pipecrawler/: package.bash  package.zsh
launch/: full_reel_system.launch.py  pipecrawler_control_launch.py  pipecrawler_launch.py  reel_launch.py
log/: latest_build
msg/: Crawlpattern.msg  Reelmessage.msg
